Name:		hournal
Version:	0.1
Synopsis:	Hournal 
Description: 	Hournal
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8



-- Library
--  hs-source-dirs: 
--  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
--  ghc-prof-options: -caf-all -auto-all
--  Build-Depends: base>4, mtl>2, transformers, attoparsec, 
--                 attoparsec-iteratee, ListLike,
--                 iteratee, bytestring-lexing, bytestring

--  Exposed-Modules: 
--                   Hournal.Type
--                   Hournal.Parse



-- Executable hournal
--  Main-is: hournal.hs
--  hs-source-dirs: src
--  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
--  ghc-prof-options: -caf-all -auto-all
--  Build-Depends: base>4, mtl>2, attoparsec, xournal-parser, gtk, cairo

Executable xojconv
  Main-is: xojconv.hs
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, attoparsec, 
                 xournal-parser, xournal-render, 
                 gtk, cairo, 
                 containers
 
		 
